--- a/nullHandling.ipynb
+++ b/nullHandling.ipynb
@@ -10,43 +10,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting spylon-kernel\n",
-      "  Using cached spylon-kernel-0.4.1.tar.gz (33 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25lerror\n",
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m \u001b[31m[18 lines of output]\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m /private/var/folders/f9/837t71m55xg58400l87yxsgm0000gn/T/pip-install-e_4pn8sf/spylon-kernel_a9f321dbe6144120a23b7b404edadcd7/versioneer.py:418: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  \u001b[31m   \u001b[0m   LONG_VERSION_PY['git'] = '''\n",
-      "  \u001b[31m   \u001b[0m Traceback (most recent call last):\n",
-      "  \u001b[31m   \u001b[0m   File \"<string>\", line 2, in <module>\n",
-      "  \u001b[31m   \u001b[0m   File \"<pip-setuptools-caller>\", line 34, in <module>\n",
-      "  \u001b[31m   \u001b[0m   File \"/private/var/folders/f9/837t71m55xg58400l87yxsgm0000gn/T/pip-install-e_4pn8sf/spylon-kernel_a9f321dbe6144120a23b7b404edadcd7/setup.py\", line 14, in <module>\n",
-      "  \u001b[31m   \u001b[0m     version=versioneer.get_version(),\n",
-      "  \u001b[31m   \u001b[0m             ^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/private/var/folders/f9/837t71m55xg58400l87yxsgm0000gn/T/pip-install-e_4pn8sf/spylon-kernel_a9f321dbe6144120a23b7b404edadcd7/versioneer.py\", line 1476, in get_version\n",
-      "  \u001b[31m   \u001b[0m     return get_versions()[\"version\"]\n",
-      "  \u001b[31m   \u001b[0m            ^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/private/var/folders/f9/837t71m55xg58400l87yxsgm0000gn/T/pip-install-e_4pn8sf/spylon-kernel_a9f321dbe6144120a23b7b404edadcd7/versioneer.py\", line 1408, in get_versions\n",
-      "  \u001b[31m   \u001b[0m     cfg = get_config_from_root(root)\n",
-      "  \u001b[31m   \u001b[0m           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m   File \"/private/var/folders/f9/837t71m55xg58400l87yxsgm0000gn/T/pip-install-e_4pn8sf/spylon-kernel_a9f321dbe6144120a23b7b404edadcd7/versioneer.py\", line 342, in get_config_from_root\n",
-      "  \u001b[31m   \u001b[0m     parser = configparser.SafeConfigParser()\n",
-      "  \u001b[31m   \u001b[0m              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  \u001b[31m   \u001b[0m AttributeError: module 'configparser' has no attribute 'SafeConfigParser'. Did you mean: 'RawConfigParser'?\n",
-      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
+      "Original DataFrame:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+----+-------------+\n",
+      "| id| name| age|         city|\n",
+      "+---+-----+----+-------------+\n",
+      "|  1|Alice|  29|     New York|\n",
+      "|  2|  Bob|NULL|San Francisco|\n",
+      "|  3| NULL|  35|         NULL|\n",
+      "|  4|David|NULL|      Seattle|\n",
+      "|  5|  Eve|  30|         NULL|\n",
+      "+---+-----+----+-------------+\n",
       "\n",
-      "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
-      "\u001b[31m╰─>\u001b[0m See above for output.\n",
+      "DataFrame after dropping rows with any null values:\n",
+      "+---+-----+---+--------+\n",
+      "| id| name|age|    city|\n",
+      "+---+-----+---+--------+\n",
+      "|  1|Alice| 29|New York|\n",
+      "+---+-----+---+--------+\n",
       "\n",
-      "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
-      "\u001b[1;36mhint\u001b[0m: See above for details.\n",
-      "\u001b[?25hNote: you may need to restart the kernel to use updated packages.\n"
+      "DataFrame after dropping rows with nulls in specific columns (age, city):\n",
+      "+---+-----+---+--------+\n",
+      "| id| name|age|    city|\n",
+      "+---+-----+---+--------+\n",
+      "|  1|Alice| 29|New York|\n",
+      "+---+-----+---+--------+\n",
+      "\n",
+      "DataFrame after dropping rows where all columns are null:\n",
+      "+---+-----+----+-------------+\n",
+      "| id| name| age|         city|\n",
+      "+---+-----+----+-------------+\n",
+      "|  1|Alice|  29|     New York|\n",
+      "|  2|  Bob|NULL|San Francisco|\n",
+      "|  3| NULL|  35|         NULL|\n",
+      "|  4|David|NULL|      Seattle|\n",
+      "|  5|  Eve|  30|         NULL|\n",
+      "+---+-----+----+-------------+\n",
+      "\n"
      ]
     }
    ],
