--- a/nullHandling.ipynb
+++ b/nullHandling.ipynb
@@ -290,7 +290,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 37,
+   "id": "3c711ef3-74a9-41a1-bad7-8528b2049be3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['id', 'name', 'age', 'city']\n",
+      "['id_x', 'name_x', 'age_x', 'city_x']\n",
+      "<zip object at 0x146f7b680>\n",
+      "old col is id  and new col is id_x\n",
+      "old col is name  and new col is name_x\n",
+      "old col is age  and new col is age_x\n",
+      "old col is city  and new col is city_x\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(oldcols)\n",
+    "print(newcols)\n",
+    "\n",
+    "print(zip(oldcols,newcols))\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i,j in zip(oldcols,newcols):\n",
+    "    print(f\"old col is {i}  and new col is {j}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "3a1021e6-1caa-484e-9b6d-646c61818a02",
    "metadata": {},
    "outputs": [
@@ -300,7 +332,7 @@
        "['id_x', 'name_x', 'age_x', 'city_x']"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,30 +344,80 @@
     "for i in oldcols:\n",
     "    newcols.append(i+\"_x\")\n",
     "\n",
-    "newcols"
+    "newcols\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "id": "efd53cf5-6d4d-487d-a324-65364662ef53",
+   "execution_count": 43,
+   "id": "70245c61-3b82-4c8b-b233-739e8edb6195",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['id_x', 'name_x', 'age_x', 'city_x']"
+       "DataFrame[id_x: bigint, name_x: string, age_x: bigint, city_x: string]"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df.select([ df[i].alias(j) for i,j in zip(oldcols,newcols)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "efd53cf5-6d4d-487d-a324-65364662ef53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+------+-----+-------------+\n",
+      "|id_x|name_x|age_x|       city_x|\n",
+      "+----+------+-----+-------------+\n",
+      "|   1| Alice|   29|     New York|\n",
+      "|   2|   Bob| NULL|San Francisco|\n",
+      "|   3|  NULL|   35|         NULL|\n",
+      "|   4| David| NULL|      Seattle|\n",
+      "|   5|   Eve|   30|         NULL|\n",
+      "+----+------+-----+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "\n",
-    "[ f\"{i}_x\" for i in df.columns ]\n"
+    "df.select([df[i].alias(f\"{i}_x\") for i in df.columns ]).show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "725137e6-3d52-4c6f-8711-5c3ef4ecb268",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Column<'id AS id_x'>,\n",
+       " Column<'name AS name_x'>,\n",
+       " Column<'age AS age_x'>,\n",
+       " Column<'city AS city_x'>]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[df[i].alias(f\"{i}_x\") for i in df.columns]"
    ]
   }
  ],
