--- a/PythonCodingRough.ipynb
+++ b/PythonCodingRough.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "id": "1daa328b-90db-4cf2-8a4b-19290b96a6ea",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
     "\n",
     "word_counts = defaultdict(int)\n",
     "\n",
-    "file_path = \"/Users/*********/PycharmProjects/Spark-Programming-In-Python/pythonInterviewQuestions/data/sampletext.txt\"\n",
+    "file_path = \"/Users/rajeshsantha/PycharmProjects/Spark-Programming-In-Python/pythonInterviewQuestions/data/sampletext.txt\"\n",
     "\n",
     "\n",
     "def getWordCount(file_path: str):\n",
@@ -98,8 +98,8 @@
     "result = getWordCount(file_path)\n",
     "print(\"result is \",result)\n",
     "\n",
-    "for word in sorted(result.items(),key=lambda x:x[1],reverse=True)[:10]:\n",
-    "    print(f\" {word} \")"
+    "for word,count in sorted(result.items(),key=lambda x:x[1],reverse=True)[:10]:\n",
+    "    print(f\" {word}- \")"
    ]
   },
   {
